--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Aymans_First_Project)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Aymans_First_Project main.cpp)
+add_executable(Aymans_First_Project main.cpp Pratice.cpp)
